--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="create_post">Create post</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
     <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
     <string name="example_post_username">Hayden</string>
     <string name="search_hint">Search...</string>
@@ -12,9 +16,8 @@
     <string name="email">E-Mail</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="no_account_register">Register a new account</string>
-    <string name="login_with_existing_account">Login with an existing account</string>
-    <string name="register">Register</string>
+    <string name="go_back">Go back</string>
+    <string name="sign_up">Sign up</string>
     <string name="repeat_password">Repeat Password</string>
     <string name="success_registration">Successfully registered account</string>
     <string name="error_password_too_short">The password must be at least %d digits long</string>
