--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="error_no_image_chosen">Please choose an image for the post</string>
     <string name="enter_comment">Enter Comment</string>
     <string name="comments">Comments</string>
+    <string name="example_post_title">EXAMPLE_</string>
 </resources>
