--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Reis</string>
+    <string name="app_name">REIS.</string>
     <string name="your_profile">Profile</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
@@ -10,7 +10,7 @@
     <string name="drawer_close">Close</string>
     <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
     <string name="example_post_username">Hayden</string>
-    <string name="search_hint">Search...</string>
+    <string name="search_hint">Search…</string>
     <string name="posts">Posts</string>
     <string name="logout">Logout</string>
     <string name="email">E-Mail</string>
@@ -34,7 +34,7 @@
     <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
     <string name="error_unknown">An unknown error occurred</string>
     <string name="choose_image">Choose image</string>
-    <string name="enter_post_text">Enter post text...</string>
+    <string name="enter_post_text">Enter post text…</string>
     <string name="post">Post</string>
     <string name="error_invalid_file">The chosen image is invalid</string>
     <string name="username">Username</string>
